# CrochetCharts

./: AGENTS.md  CMakeLists.txt  MEMORY.md  README.md  TODO.md  crochet.qrc
docs/: desktop-feature-audit.md  granny-square-ru.md
resources/: installers.cmake
resources/themes/: desktop.qss
skills/: README.md
skills/desktop-action-audit/: SKILL.md
skills/desktop-ui-modernization/: SKILL.md
skills/platform-modernization-roadmap/: SKILL.md
src/: CMakeLists.txt  ChartImage.cpp  aligndock.cpp  aligndock.h  aligndock.ui  application.cpp  application.h  chartview.cpp  chartview.h  colorlabel.cpp  colorreplacer.cpp  colorreplacer.h  colorreplacer.ui  crochettab.cpp  crochettab.h  errorhandler.h  export.ui  exportui.cpp  exportui.h  filefactory.h  guideline.cpp  indicator.cpp  itemgroup.cpp  legends.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mirrordock.cpp  mirrordock.h  mirrordock.ui  propertiesdock.cpp  propertiesdock.h  propertiesdock.ui  resize.ui  resizeui.cpp  resizeui.h  roweditdialog.ui  rowsdock.cpp  rowsdock.ui  (+22 more)
tests/: CMakeLists.txt  main.cpp  testsettings.cpp  teststitchlibrary.cpp  teststitchset.cpp
translations/: crochetcharts_ru.qm  crochetcharts_ru.ts  translations.qrc
utils/: prepare_macos_bundle.sh
